--- a/Lab2WifiScanner/app/src/main/res/layout/activity_main.xml
+++ b/Lab2WifiScanner/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+     android:id="@+id/startButton"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:text="Start"
+     android:onClick="startMethod"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Space
+     android:layout_width="1dp"
+     android:layout_height="30dp"/>
+
+    <Button
+     android:id="@+id/stopButton"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:text="Stop"
+     android:onClick="stopMethod"/>
+
+</LinearLayout>
