--- a/Lab4ExternalMemory/app/src/main/res/layout/activity_main2.xml
+++ b/Lab4ExternalMemory/app/src/main/res/layout/activity_main2.xml
@@ -5,14 +5,12 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
         android:gravity="center_horizontal"
-        android:hint="Enter text to save!" />
+        android:hint="Click the buttons to view saved data!" />
 
     <Space
         android:layout_width="1dp"
@@ -22,8 +20,8 @@
         android:id="@+id/privateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAVE AS PRIVATE"
-        android:onClick="privateSaveMethod"/>
+        android:text="SHOW PRIVATE DATA"
+        android:onClick="privateShowMethod"/>
 
     <Space
         android:layout_width="1dp"
@@ -33,17 +31,17 @@
         android:id="@+id/publicBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAVE AS PUBLIC"
-        android:onClick="publicSaveMethod"/>
+        android:text="SHOW PUBLIC DATA"
+        android:onClick="publicShowMethod"/>
 
     <Space
         android:layout_width="1dp"
         android:layout_height="30dp"/>
 
     <Button
-        android:id="@+id/viewBtn"
+        android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CLICK TO VIEW"
-        android:onClick="viewDataMethod"/>
+        android:text="BACK"
+        android:onClick="backMethod"/>
 </LinearLayout>
