--- a/Lab3ToDoList/app/src/main/res/layout/activity_main.xml
+++ b/Lab3ToDoList/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+	     android:layout_width="fill_parent" 
+	     android:layout_height="fill_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="175dp"
-        tools:layout_editor_absoluteY="148dp">
+  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="vertical"
+		android:gravity="center">
 
-        <ListView
-            android:id="@+id/notesList"
-            android:layout_width="match_parent"
-            android:layout_height="433dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:background="@android:color/transparent"
-            android:cacheColorHint="@android:color/transparent"
-            android:divider="#CCCCCC"
-            android:dividerHeight="1dp"
-            android:paddingLeft="2dp" />
+    <ListView
+	android:id="@+id/notesList"
+	android:layout_width="match_parent"
+	android:layout_height="433dp"
+	android:layout_marginTop="5dp"
+	android:layout_marginBottom="10dp"
+	android:background="@android:color/transparent"
+	android:cacheColorHint="@android:color/transparent"
+	android:divider="#CCCCCC"
+	android:dividerHeight="1dp"
+	android:paddingLeft="2dp" />
 
-        <Button
-            android:id="@+id/newNoteBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Note"
-            android:onClick="newNote"/>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+	android:id="@+id/newNoteBtn"
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:text="New Note"
+	android:onClick="newNote"/>
+  </LinearLayout>
 
+</ScrollView>
